# Ielts-with-Agent

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  IELTS-Writing-Agent-设计文档.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
data/eval/: results.jsonl  retrieval_queries.jsonl  retrieval_results.jsonl
data/gold/: manifest.json
data/gold/bodies/: cam10_t1_q1_sample.txt  cam10_t1_q2_model.txt  cam10_t2_q1_model.txt  cam10_t2_q2_sample.txt  cam10_t3_q1_sample.txt  cam10_t3_q2_model.txt  cam10_t4_q1_model.txt  cam10_t4_q2_sample.txt  (+64 more)
docs/: EVALUATION.md
frontend/: app.js  index.html  style.css
scripts/: assistant.py  build_stage0.py  demo_memory.py  demo_retrieve.py  extract_gold.py  grade_essay.py  obs_summary.py
src/: __init__.py  config.py  llm.py  mcp_server.py
src/agent/: __init__.py  graph.py
src/api/: __init__.py  app.py
src/data/: __init__.py  gold_extract.py  ingest.py  ingest_gold.py  normalize.py  topic.py
src/db/: __init__.py  library.py  schema.sql  sqlite.py
src/eval/: __init__.py  harness.py  metrics.py  retrieval.py
src/graph/: __init__.py  build.py  nodes.py  session.py  state.py
src/memory/: __init__.py  checkpoint.py  profile.py
src/obs/: __init__.py  tracker.py
src/rag/: __init__.py  build_index.py  embeddings.py  rubric.py  store.py
src/tools/: __init__.py  _json.py  deconstruct.py  dictionary.py  exemplar.py  grammar.py  save.py  score.py  vocab.py
tests/: test_connectivity.py  test_retrieval_eval.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py
