[project]
name = "ielts-writing-agent"
version = "0.0.1"
description = "基于 LangGraph 的雅思写作批改与学习 Agent"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "ollama>=0.3",
    "pypdf>=4.0",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
